Thu Jun 20 07:46:48 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (rb_gc_writebarrier): give up rescan A and register B directly
	  if A has huge number of children.

Thu Jun 20 07:30:35 2013  Koichi Sasada  <ko1@atdot.net>

	* common.mk: add new rules `gcbench-rdoc', `gcbench-hash'.

	* tool/gcbench.rb: separate GC bench framework and process.

	* tool/hashbench1.rb, tool/hashbench2.rb: add two types GC bench.
	  hashbench1: many temporal objects (GC by newobj)
	  hashbench2: hash size becomes bigger and bigger (GC by malloc)
	  Two benchs are executed by `gcbench-hash' rule.

	* tool/rdocbench.rb: separated.

Thu Jun 20 06:25:39 2013  Koichi Sasada  <ko1@atdot.net>

	* tool/rdocbench.rb: add summary.

Thu Jun 20 06:18:01 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_total_time): check objspace->profile.next_index > 0.

Thu Jun 20 05:47:41 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_prof_sweep_timer_start): fix merge miss.

	* gc.c (GC_PROFILE_MORE_DETAIL): set it 0.

Thu Jun 20 05:38:56 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: Accumulate sweep time to GC time.
	  Now [GC time] is [mark time] + [sweep time] + [misc].
	  ([GC time] >= [mark time] + [sweep time])

	* gc.c (gc_prof_sweep_slot_timer_start/stop): rename to
	  gc_prof_sweep_timer_start/stop and locate at lazy_sweep().

	* gc.c (elapsed_time_from): add a utility function.

Thu Jun 20 05:08:53 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks): fix wrong option. FALSE means major/full GC.
	  It should be TRUE (minor marking).

Thu Jun 20 02:44:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (waitpid): should not return 0 but wait until exit
	  unless WNOHANG is given.  waiting huge process may return while
	  active, for some reason.

Thu Jun 20 01:34:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bdigit_roomof): Use SIZEOF_BDIGITS.
	  (bigfixize): Refine an ifdef condition.
	  (rb_absint_size): Use bdigit_roomof.
	  (rb_absint_singlebit_p): Ditto.